update: docs, bug fix--github website error

--- a/site/data_management/index.html
+++ b/site/data_management/index.html
@@ -447,7 +447,7 @@
         
   
   <span class="md-ellipsis">
-    Example 1: 2D visualization
+    Example 1 - 2D visualization
   </span>
   
 
@@ -468,7 +468,7 @@
         
   
   <span class="md-ellipsis">
-    Example 2: 3D visualization
+    Example 2 - 3D visualization
   </span>
   
 
