--- a/site/index.html
+++ b/site/index.html
@@ -386,7 +386,7 @@
         
   
   <span class="md-ellipsis">
-    Example 1: 2D visualization
+    Example 1 - 2D visualization
   </span>
   
 
@@ -407,7 +407,7 @@
         
   
   <span class="md-ellipsis">
-    Example 2: 3D visualization
+    Example 2 - 3D visualization
   </span>
   
 
