--- a/site/404.html
+++ b/site/404.html
@@ -369,7 +369,7 @@
         
   
   <span class="md-ellipsis">
-    Example 1: 2D visualization
+    Example 1 - 2D visualization
   </span>
   
 
@@ -390,7 +390,7 @@
         
   
   <span class="md-ellipsis">
-    Example 2: 3D visualization
+    Example 2 - 3D visualization
   </span>
   
 
