--- a/site/getting_started/index.html
+++ b/site/getting_started/index.html
@@ -438,7 +438,7 @@
         
   
   <span class="md-ellipsis">
-    Example 1: 2D visualization
+    Example 1 - 2D visualization
   </span>
   
 
@@ -459,7 +459,7 @@
         
   
   <span class="md-ellipsis">
-    Example 2: 3D visualization
+    Example 2 - 3D visualization
   </span>
   
 
