--- a/site/panel_linkages/index.html
+++ b/site/panel_linkages/index.html
@@ -390,7 +390,7 @@
         
   
   <span class="md-ellipsis">
-    Example 1: 2D visualization
+    Example 1 - 2D visualization
   </span>
   
 
@@ -411,7 +411,7 @@
         
   
   <span class="md-ellipsis">
-    Example 2: 3D visualization
+    Example 2 - 3D visualization
   </span>
   
 
