--- a/overrides/main.html
+++ b/overrides/main.html
@@ -3,7 +3,8 @@
 {% block scripts %}
 <!-- Add scripts that need to run before here -->
 <script defer src="https://umami.stintev.site/random-string.js"
-    data-website-id="49504cbe-b1f1-4090-8c64-8b75865d3260"></script>
+    data-website-id="49504cbe-b1f1-4090-8c64-8b75865d3260"
+    data-domains="stintev.site"></script>
 {{ super() }}
 <!-- Add scripts that need to run afterwards here -->
 {% endblock %}
